update skip frame

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'Near-miss-accident-prediction-using-dashcam-videos'...\n",
             "remote: Enumerating objects: 5842, done.\u001b[K\n",
@@ -48,9 +32,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd Near-miss-accident-prediction-using-dashcam-videos"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -58,27 +40,22 @@
         "id": "X_1ryAkpJSW6",
         "outputId": "ea2d1fd8-1c44-4c5d-f108-a4ed06e57e50"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/Near-miss-accident-prediction-using-dashcam-videos\n"
           ]
         }
+      ],
+      "source": [
+        "%cd Near-miss-accident-prediction-using-dashcam-videos"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pyyaml==5.4.1\n",
-        "!pip install filterpy\n",
-        "!pip install --upgrade pip\n",
-        "!pip install motion-vector-extractor\n",
-        "!pip install -U numpy\n",
-        "!pip install pykml"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -87,11 +64,10 @@
         "id": "Nd1Y7Fk9Ja5t",
         "outputId": "6931cedb-df76-48d1-f80e-9d0f70d1bf58"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting pyyaml==5.4.1\n",
             "  Downloading PyYAML-5.4.1.tar.gz (175 kB)\n",
@@ -181,7 +157,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -191,11 +166,12 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting pykml\n",
             "  Downloading pykml-0.2.0-py3-none-any.whl (41 kB)\n",
@@ -207,16 +183,21 @@
             "\u001b[0m"
           ]
         }
+      ],
+      "source": [
+        "!pip install tensorflow==2.12.0\n",
+        "!pip install keras==2.12.0\n",
+        "!pip install pyyaml==5.4.1\n",
+        "!pip install filterpy\n",
+        "!pip install --upgrade pip\n",
+        "# !pip install motion-vector-extractor\n",
+        "!pip install -U numpy\n",
+        "!pip install pykml"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd /content/Near-miss-accident-prediction-using-dashcam-videos/DeepHough\n",
-        "%cd model/_cdht\n",
-        "!python setup.py build\n",
-        "!python setup.py install --user"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -224,11 +205,10 @@
         "id": "VpSZFg7dJqCG",
         "outputId": "0a87816a-f2aa-43bf-b1e1-f54b7b5c9a76"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/Near-miss-accident-prediction-using-dashcam-videos/DeepHough\n",
             "/content/Near-miss-accident-prediction-using-dashcam-videos/DeepHough/model/_cdht\n",
@@ -619,17 +599,24 @@
             "Finished processing dependencies for deep-hough==0.0.0\n"
           ]
         }
+      ],
+      "source": [
+        "%cd /content/Near-miss-accident-prediction-using-dashcam-videos"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "%cd /content/Near-miss-accident-prediction-using-dashcam-videos\n",
-        "!python run.py --folderpath '/content/Near-miss-accident-prediction-using-dashcam-videos/Runs/sample_741376'\\\n",
-        "               --videopath '/content/Near-miss-accident-prediction-using-dashcam-videos/Runs/sample_741376/sample_741376.mp4'\\\n",
-        "               --KML_file_path ''\\\n",
-        "               --FOV_horizontal 110 --FOV_vertical 70 --CameraHeight 1.46"
-      ],
+        "from setup import SettingEnvironment\n",
+        "SettingEnvironment()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -637,11 +624,10 @@
         "id": "hjBAyVqUJxnD",
         "outputId": "2b1a9da5-3984-49b5-9d4e-73c6b9c75e90"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/Near-miss-accident-prediction-using-dashcam-videos\n",
             "running install\n",
@@ -780,16 +766,39 @@
             "save file to risk.json\n"
           ]
         }
+      ],
+      "source": [
+        "%cd /content/Near-miss-accident-prediction-using-dashcam-videos\n",
+        "!python run.py --folderpath '/content/Near-miss-accident-prediction-using-dashcam-videos/Runs/sample_741376'\\\n",
+        "               --videopath '/content/Near-miss-accident-prediction-using-dashcam-videos/Runs/sample_741376/sample_741376.mp4'\\\n",
+        "               --KML_file_path ''\\\n",
+        "               --FOV_horizontal 110 --FOV_vertical 70 --CameraHeight 1.46"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 5,
       "metadata": {
         "id": "BstMJ-8eKZi2"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
