--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -32,29 +32,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X_1ryAkpJSW6",
-        "outputId": "ea2d1fd8-1c44-4c5d-f108-a4ed06e57e50"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/content/Near-miss-accident-prediction-using-dashcam-videos\n"
-          ]
-        }
-      ],
-      "source": [
-        "%cd Near-miss-accident-prediction-using-dashcam-videos"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "colab": {
@@ -190,7 +167,7 @@
         "!pip install pyyaml==5.4.1\n",
         "!pip install filterpy\n",
         "!pip install --upgrade pip\n",
-        "# !pip install motion-vector-extractor\n",
+        "!pip install motion-vector-extractor\n",
         "!pip install -U numpy\n",
         "!pip install pykml"
       ]
@@ -615,6 +592,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**VANISHING POINT OPTION**\n",
+        "\n",
+        "You can choose two options of Vanishing Point Detection method:\n",
+        "\n",
+        "\"--vnp_det_option 0\" : Detection vanishing point with Deephough transform\n",
+        "\n",
+        "\"--vnp_det_option 1\" : Detection vanishing point with Ransac Motion Vector"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
@@ -768,21 +758,12 @@
         }
       ],
       "source": [
-        "%cd /content/Near-miss-accident-prediction-using-dashcam-videos\n",
         "!python run.py --folderpath '/content/Near-miss-accident-prediction-using-dashcam-videos/Runs/sample_741376'\\\n",
         "               --videopath '/content/Near-miss-accident-prediction-using-dashcam-videos/Runs/sample_741376/sample_741376.mp4'\\\n",
         "               --KML_file_path ''\\\n",
+        "               --vnp_det_option 0\\\n",
         "               --FOV_horizontal 110 --FOV_vertical 70 --CameraHeight 1.46"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "id": "BstMJ-8eKZi2"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -796,7 +777,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.11.6"
     }
   },
   "nbformat": 4,
